--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -9,11 +9,10 @@
 
 <body>
 
-    Before
-    <br>
+    <%- include('../partials/header') %>
+    <%- include('../partials/errorMessage') %>
     <%- body %>
     <br>
-    After
 
 </body>
 
