Books create/index/new + search options

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,9 @@
         <ul>
             <li><a href="/authors">Auteurs</a></li>
             <li><a href="/authors/new">Ajouter auteurs</a></li>
+            <li><a href="/books">Livres</a></li>
+            <li><a href="/books/new">Ajouter des livres</a></li>
+
         </ul>
     </nav>
 </header>
