--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,6 +1,6 @@
 <h2>Nouveau livre</h2>
 
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST">
     <%- include('_form_fields') %>
     <a href="/books">Annuler</a>
     <button type="submit">Créer</button>
