Finish books routes : show+edit+delete

--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -7,7 +7,9 @@
 <h2>Livres de l'auteur</h2>
 <div>
     <% booksByAuthor.forEach(book => { %>
-    <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
+    <a href="/books/<%= book.id %>">
+        <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
+    </a>
     <% }) %>
 </div>
 <% } %>
