--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -15,8 +15,11 @@
     </div>
     <button type="submit">Rechercher</button>
 </form>
+
 <div>
     <% books.forEach(book => { %>
-    <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
+    <a href="/books/<%= book.id %>">
+        <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
+    </a>
     <% }) %>
 </div>
