--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,4 +1,4 @@
 <!-- La boucle permet de vérifier s'il y a un message d'erreur -->
 <% if(locals.errorMessage != null) { %>
-<%= errorMessage %>
+<div class="error-message"><%= errorMessage %></div>
 <% } %>
