--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,7 +1,8 @@
-<h2>Modifier l'auteur</h2>
-
+<h2 class="page-header">Edit Author</h2>
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %>
-    <a href="/authors/<%= author.id %> ">Annuler</a>
-    <button type="submit">Mettre à jour</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/authors/<%= author.id %>">Cancel</a>
+        <button class="btn btn-primary" type="submit">Update</button>
+    </div>
 </form>
