--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,7 +1,8 @@
-<h2>Nouvel auteur</h2>
-
+<h2 class="page-header">New Author</h2>
 <form action="/authors" method="POST">
     <%- include('_form_fields') %>
-    <a href="/authors">Annuler</a>
-    <button type="submit">Créer</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/authors">Cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+    </div>
 </form>
