--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,15 +1,10 @@
-<h2><%= author.name %></h2>
-<a href="/authors/<%= author.id  %>/edit">Modifier</a>
-<%- include('../partials/deleteForm', 
-{ url: `/authors/${author.id}`}) %>
-
-<% if (booksByAuthor.length > 0) { %>
-<h2>Livres de l'auteur</h2>
-<div>
-    <% booksByAuthor.forEach(book => { %>
-    <a href="/books/<%= book.id %>">
-        <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
-    </a>
-    <% }) %>
+<h2 class="page-header"><%= author.name %></h2>
+<div class="btn-row">
+    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+    <%- include('../partials/deleteForm',
+              { url: `/authors/${author.id}` }) %>
 </div>
+<% if (booksByAuthor.length > 0) { %>
+<h2 class="page-header">Books By Author</h2>
+<%- include('../partials/bookGrid', { books: booksByAuthor }) %>
 <% } %>
