--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,44 +1,41 @@
-<div>
-    <label>Titre</label>
-    <input type="text" name="title" value="<%= book.title %>">
+<div class="form-row">
+    <div class="form-item">
+        <label>Titre</label>
+        <input type="text" name="title" value="<%= book.title %>">
+    </div>
+    <div class="form-item">
+        <label>Auteur</label>
+        <select name="author">
+            <% authors.forEach(author => { %>
+            <% if (author.id === book.author) { %>
+            <option selected label="<%= author.name %>" value="<%= author.id %>">
+                <% } else { %>
+            <option label="<%= author.name %>" value="<%= author.id %>">
+                <% } %>
+                <% }) %>
+        </select>
+    </div>
 </div>
 
-<div>
-    <label>Auteur</label>
-    <select name="author">
-
-        <% authors.forEach(author => { %>
-
-        <% if (author.id === book.author) { %>
-        <option selected value="<%=author.id%>" label="<%=author.name%>">
-            <% } else {%>
-        <option value="<%=author.id%>" label="<%=author.name%>">
-            <%}%>
-
-    <%})%>
-
-    </select>
+<div class="form-row">
+    <div class="form-item">
+        <label>Date de publication</label>
+        <input type="date" name="publishDate"
+            value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    </div>
+    <div class="form-item">
+        <label>Nombre de pages</label>
+        <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
+    </div>
 </div>
 
-<div>
-    <label>Date de publication</label>
-    <input type="date" name="publishDate" value="<%= book.publishDate == null ? '' : 
-    book.publishDate.toISOString().split('T')[0] %>">
-</div>
-
-<div>
-    <label>Nombre de pages</label>
-    <input type="number" name="pageCount" value="<%= book.pageCount %>" min="1">
-</div>
-
-<div>
-    <label>Couverture</label>
-    <input type="file" name="cover" class="filepond">
-</div>
-
-<div>
-    <label>Description</label>
-    <textarea name="description">
-        <% book.description %> 
-    </textarea>
+<div class="form-row">
+    <div class="form-item form-item-no-grow">
+        <label>Page de couverture</label>
+        <input type="file" name="cover" class="book-cover filepond">
+    </div>
+    <div class="form-item">
+        <label>Description</label>
+        <textarea name="description"><%= book.description %></textarea>
+    </div>
 </div>
