--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,17 +1,22 @@
-<h2><%= book.title %></h2>
-
-<img width="100" height="150" src="<%= book.coverImagePath %>">
-
-<div>Author: <%= book.author.name %></div>
-
-<div>Publish Date: <%= book.publishDate.toDateString() %></div>
-
-<div>Page Count: <%= book.pageCount %></div>
-
-<div>Description: <%= book.description %></div>
-
-<a href="/books/<%= book.id %>/edit">Modifier</a>
-
-<%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
-
-<a href="/authors/<%= book.author.id %>">Voir l'auteur</a>
+<h2 class="page-header"><%= book.title %></h2>
+<div class="book-details">
+    <div>
+        <img class="book-cover" src="<%= book.coverImagePath %>">
+        <div class="book-details-btn-grid">
+            <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Modifier</a>
+            <%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
+            <a class="btn btn-primary book-details-author-button" href="/authors/<%= book.author.id %>">Voir
+                l'auteur</a>
+        </div>
+    </div>
+    <div class="book-details-grid">
+        <div class="book-details-label">Auteur:</div>
+        <div><%= book.author.name %></div>
+        <div class="book-details-label">Date de publication :</div>
+        <div><%= book.publishDate.toDateString() %></div>
+        <div class="book-details-label">Nombre de pages :</div>
+        <div><%= book.pageCount %></div>
+        <div class="book-details-label">Description :</div>
+        <div><%= book.description %></div>
+    </div>
+</div>
