--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,3 @@
-<h2>Ajouts récents</h2>
+<h2 class="page-header">Ajouts récents</h2>
 
-<div>
-    <% books.forEach(book => { %>
-    <a href="/books/<%= book.id %>">
-        <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
-    </a>
-    <% }) %>
-</div>
+<%- include('partials/bookGrid', { books: books, large: true }) %>
