--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,16 +12,18 @@
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css">
     <title>Mybrary</title>
 </head>
 
 <body>
-
-    <%- include('../partials/header') %>
-    <%- include('../partials/errorMessage') %>
-    <%- body %>
-    <br>
-
+    <div class="container">
+        <%- include('../partials/header.ejs') %>
+        <div class="inner-container">
+            <%- include('../partials/errorMessage.ejs') %>
+            <%- body %>
+        </div>
+    </div>
 </body>
 
 </html>
