--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,3 +1,3 @@
 <form action="<%= url %>?_method=DELETE" method="POST">
-    <button type="submit">Supprimer</button>
+    <button class="btn btn-danger" type="submit">Supprimer</button>
 </form>
