--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">Mybrary</a>
+    <nav class="header-nav">
+        <a href="/" class="header-title">Mybrary</a>
         <ul>
             <li><a href="/authors">Auteurs</a></li>
             <li><a href="/authors/new">Ajouter auteurs</a></li>
